Spinners, Validacion de campos, recoleccion de datos

--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
     <script src="js/bootstrap-material-design.js" integrity="sha384-3xciOSDAlaXneEmyOo0ME/2grfpqzhhTcM4cE32Ce9+8DW/04AGoTACzQpphYGYe" crossorigin="anonymous"></script>
     <script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
 
-    <script src="js/appAuto.js"></script>
+    <script src="js/appAutos.js"></script>
   </body>
 </html>
