Convirtiendo el proyecto de prototipos a clases (ES6)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Material Design for Bootstrap fonts and icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
     <!-- Material Design for Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap-material-design.min.css" integrity="sha384-R80DC0KVBO4GSTw+wZ5x2zn2pu4POSErBkf8/fSFhPXHxvHJydT0CSgAP2Yo2r4I" crossorigin="anonymous">
@@ -51,7 +52,7 @@
                                 </div>
                                 <fieldset class="form-group">
                                     <div class="row">
-                                         <legend class="col-form-legend col-12">Tipo Seguro</legend>
+                                         <legend  class="col-form-legend col-12">Tipo Seguro</legend>
 
                                       <div class="col12">
                                           <div class="form-check">
@@ -75,9 +76,12 @@
                           </div>
                           <div id="resultado"></div>
                           <div class="form-group">
-                                  <button type="submit" class="btn btn-raised btn-primary">Cotizar
+                                  <button  type="submit" class="btn btn-raised btn-primary">
+                                  Cotizar
                                   </button>
                           </div>
+                          
+                         
                   </form> 
                 </div>
           </div>
